--- a/Python ATO Tax Calculator.ipynb
+++ b/Python ATO Tax Calculator.ipynb
@@ -18,30 +18,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d8eadd19",
+   "metadata": {},
+   "source": [
+    "## Handling Exceptions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "86fa0660",
+   "execution_count": 44,
+   "id": "3fd6862d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your yearly income 20000\n",
-      "\n",
-      "Yearly Income :  20000.0\n"
+      "Enter your yearly income -1\n",
+      "Invalid Income\n"
      ]
     }
    ],
    "source": [
-    "income = float(input(\"Enter your yearly income \"))\n",
-    "income = round(income,2)\n",
-    "print('\\nYearly Income : ', income)"
+    "#This is to ensure that the income has to be a valid value \n",
+    "while True:\n",
+    "    try:\n",
+    "        income = float(input(\"Enter your yearly income \"))\n",
+    "        break\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid Income\")\n",
+    "    \n",
+    "#This is to check if income yearly is positive value (including 0)\n",
+    "if income < 0:\n",
+    "    print(\"Invalid Income\")\n",
+    "elif income >= 0:\n",
+    "    print(f'\\nYearly Income : ${round(income,2)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dfa8cd5",
+   "metadata": {},
+   "source": [
+    "## Here we use the value income based on Resident tax rates 2023–24 to determine how much left is deducted after tax"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "id": "97918c2d",
    "metadata": {},
    "outputs": [
@@ -49,13 +74,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deduction:  3800.0\n",
-      "Net-Pay after Tax:  16200.0\n"
+      "Tax Deduction: $24592.0\n",
+      "Net-Pay after Tax: $35408.0\n"
      ]
     }
    ],
    "source": [
-    "#Here I am referring to the Resident tax rates from 2023–24\n",
+    "\n",
     "if income >= 18201 and income <= 45000:\n",
     "    deduc = 0.19*income\n",
     "elif income >= 45001 and income <= 120000:\n",
@@ -63,18 +88,18 @@
     "elif income >= 120001 and income <= 180000:\n",
     "    deduc = 29467 + 0.37*income\n",
     "elif income >= 180001:\n",
-    "    deduc = 51667 + 45*income\n",
+    "    deduc = 51667 + 0.45*income\n",
     "else:\n",
     "    deduc = 0\n",
-    "print('Deduction: ', deduc)\n",
-    "takehome = income -deduc\n",
-    "print('Net-Pay after Tax: ', round(takehome,2)) \n"
+    "print(f'Tax Deduction: ${deduc}')\n",
+    "takehome = income - deduc\n",
+    "print(f'Net-Pay after Tax: ${round(takehome,2)}') \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653a3fdf",
+   "id": "1a1e8561",
    "metadata": {},
    "outputs": [],
    "source": []
